--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -19,29 +19,39 @@ body {
   height: 100vh;
   display: flex;
   justify-content: center;
-  align-items: center;
   background-color: var(--main-color);
   color: var(--font-color);
   padding: 20px 0;
 }
 
 .form {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  column-gap: 5px;
+  row-gap: 10px;
 }
 
-.form__name,
-.form__phone,
+.form__name {
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+
+.form__phone {
+  grid-column: 2/3;
+  grid-row: 1/2;
+}
+
 .form__email {
-  width: 500px;
+  grid-column: 1/3;
+  grid-row: 2/3;
 }
 
-.form .btn {
+.btn {
+  grid-column: 1/3;
+  grid-row: 3/4;
   background-color: #2a9d8f;
   border-radius: 5px;
-  padding: 15px 30px;
-  margin: 10px 0;
   border: 2px solid var(--border-color);
   cursor: pointer;
   font-weight: bold;
@@ -49,7 +59,7 @@ body {
   transition: all 0.3s;
 }
 
-.form .btn:hover {
+.btn:hover {
   background-color: var(--button-hover);
 }
 
@@ -57,15 +67,16 @@ body {
   border-radius: 5px;
   padding: 10px;
   border: 2px solid var(--border-color);
-  margin: 10px 0;
-}
-.list__search {
   width: 100%;
+}
+.list__search{
+  margin-top: 10px;
 }
 
 .list h1 {
   text-align: center;
   font-size: 2rem;
+  margin-bottom: 10px;
 }
 
 .list ul {
@@ -73,10 +84,12 @@ body {
 }
 
 .list li {
+  /* display: flex; */
   background-color: var(--background-color);
   border: 2px solid black;
   border-radius: 5px;
   padding: 8px;
+  margin: 10px 0;
 }
 
 .list li p {
@@ -87,5 +100,5 @@ body {
 .list li span {
   font-size: 1rem;
   font-weight: lighter;
-  margin-left: 10px;
+  margin: 10px;
 }
